--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .no-select {
-  color: black;
+  color: red;
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
   text-decoration: none !important;
   pointer-events: none;
